@@ -1,2 +1,2 @@
-java -Xmx4G -Xms1G -XX:MaxPermSize=128m -jar "minecraft_server.1.15.2.jar" nogui
+java -Xmx4G -Xms1G -jar "minecraft_server.1.15.2.jar" nogui
 pause
